--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
