--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,10 +9,16 @@ python-dotenv
 # PDF text extraction
 PyMuPDF
 
-# Optional: Logging or data formatting
-rich
-
 # Only needed for visualizations or future UI
 matplotlib
 seaborn
 streamlit
+
+Flask==2.3.3
+Flask-Cors==4.0.0
+pymongo==4.7.2
+bcrypt==4.1.3
+PyJWT==2.8.0
+langchain-google-genai==0.0.11
+bson==0.5.10
+
